Fix whitespace padding on large screens

--- a/style.css
+++ b/style.css
@@ -66,8 +66,11 @@ main {
         padding: 0 3rem 1.5rem 3rem;
     }
 
-    main section:not(.filtered):last-child {
-        min-height: calc(100vh - 1.5rem);
+    main section::before {
+        content: '';
+        height: 100vh;
+        width: calc(70% - 6rem);
+        position: absolute;
     }
 
     .small-screen-only {
@@ -88,6 +91,10 @@ main {
     main {
         margin-left: calc(50% - 12rem);
         width: 42rem;
+    }
+
+    main section::before {
+        width: 36rem;
     }
 }
 
